force-app/main/default/objects/Dazos_Usage_Data__c/Dazos_Usage_Data__c.object-meta.xml
<CustomObject>
    <label>Dazos Usage Data</label>
    <nameField>
        <displayFormat>DD-{0000}</displayFormat>
        <label>Data ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dazos Usage Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>