force-app/main/default/objects/Dazos_Usage_Data__c/fields/Accounts_Count__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Count__c</fullName>
    <description>Number of Accounts associated with this record.</description>
    <inlineHelpText>Number of Accounts associated with this record.</inlineHelpText>
    <label>Accounts Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>