force-app/main/default/objects/Dazos_Usage_Data__c/fields/Avg_Daily_New_Lead_Count_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>Avg_Daily_New_Lead_Count_Last_30_Days__c</fullName>
    <description>Average number of new Leads created per day over the last 30 days for this Account.</description>
    <inlineHelpText>Average number of new Leads created per day over the last 30 days for this Account.</inlineHelpText>
    <label>Avg Daily New Lead Count Last 30 Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>