force-app/main/default/objects/Dazos_Usage_Data__c/fields/CRM_Enabled__c.field-meta.xml
<CustomField>
    <fullName>CRM_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows whether CRM features are enabled for this account.</description>
    <inlineHelpText>Shows if CRM feature is enabled. Set by integration.</inlineHelpText>
    <label>CRM Enabled</label>
    <type>Checkbox</type>
</CustomField>