force-app/main/default/objects/Dazos_Usage_Data__c/fields/Date_of_10th_Opportunity_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_of_10th_Opportunity_Created__c</fullName>
    <description>Date when this Account’s 10th Opportunity was created (excluding imported records).</description>
    <inlineHelpText>Date when this Account’s 10th Opportunity was created (excluding imported records).</inlineHelpText>
    <label>Date of 10th Opportunity Created</label>
    <type>Date</type>
</CustomField>