force-app/main/default/objects/Dazos_Usage_Data__c/fields/EMRs_Integrated__c.field-meta.xml
<CustomField>
    <fullName>EMRs_Integrated__c</fullName>
    <description>Number of EMRs integrated with the Account.</description>
    <inlineHelpText>Number of EMRs integrated with the Account.</inlineHelpText>
    <label>EMRs Integrated</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EMR 1</fullName>
            </value>
            <value>
                <fullName>EMR 2</fullName>
            </value>
            <value>
                <fullName>EMR 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>