force-app/main/default/objects/Dazos_Usage_Data__c/fields/iCampaign_Enabled__c.field-meta.xml
<CustomField>
    <fullName>iCampaign_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows whether iCampaign functionality is enabled for this account.</description>
    <inlineHelpText>Shows whether iCampaign functionality is enabled for this account.</inlineHelpText>
    <label>iCampaign Enabled</label>
    <type>Checkbox</type>
</CustomField>