force-app/main/default/objects/Dazos_Usage_Data__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>Stores the industry associated with this account.</description>
    <inlineHelpText>Stores the industry associated with this account.</inlineHelpText>
    <label>Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>