force-app/main/default/objects/Dazos_Usage_Data__c/fields/Instant_VOB_Count__c.field-meta.xml
<CustomField>
    <fullName>Instant_VOB_Count__c</fullName>
    <description>Number of Instant VOB records associated with the Account.</description>
    <inlineHelpText>Number of Instant VOB records associated with the Account.</inlineHelpText>
    <label>Instant VOB Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>