force-app/main/default/objects/Dazos_Usage_Data__c/fields/Instant_VOB_Count_Yesterday__c.field-meta.xml
<CustomField>
    <fullName>Instant_VOB_Count_Yesterday__c</fullName>
    <label>Instant VOB Count Yesterday</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>