force-app/main/default/objects/Dazos_Usage_Data__c/fields/Instant_VOBs_Last_30_days__c.field-meta.xml
<CustomField>
    <fullName>Instant_VOBs_Last_30_days__c</fullName>
    <label>Instant VOBs Last 30 days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>