force-app/main/default/objects/Dazos_Usage_Data__c/fields/Instant_VOBs_Last_60_days__c.field-meta.xml
<CustomField>
    <fullName>Instant_VOBs_Last_60_days__c</fullName>
    <description>Number of Instant VOBs created in the last 60 days for this Account.</description>
    <inlineHelpText>Number of Instant VOBs created in the last 60 days for this Account.</inlineHelpText>
    <label>Instant VOBs Last 60 days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>