force-app/main/default/objects/Dazos_Usage_Data__c/fields/Integrated_Email_Campaigns__c.field-meta.xml
<CustomField>
    <fullName>Integrated_Email_Campaigns__c</fullName>
    <description>Number of integrated email campaigns associated with the Account.</description>
    <inlineHelpText>Number of integrated email campaigns associated with the Account.</inlineHelpText>
    <label>Integrated Email Campaigns</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>iCampaign</fullName>
            </value>
            <value>
                <fullName>MailChimp</fullName>
            </value>
            <value>
                <fullName>Constant Contact</fullName>
            </value>
            <value>
                <fullName>Hubspot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>