force-app/main/default/objects/Dazos_Usage_Data__c/fields/IQ_Enabled__c.field-meta.xml
<CustomField>
    <fullName>IQ_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether IQ features are enabled for this record.</description>
    <inlineHelpText>Indicates whether IQ features are enabled for this record.</inlineHelpText>
    <label>IQ Enabled</label>
    <type>Checkbox</type>
</CustomField>