force-app/main/default/objects/Dazos_Usage_Data__c/fields/iVerify_Enabled__c.field-meta.xml
<CustomField>
    <fullName>iVerify_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Shows whether IQ functionality is enabled for this record.</description>
    <inlineHelpText>Shows whether IQ functionality is enabled for this record.</inlineHelpText>
    <label>iVerify Enabled</label>
    <type>Checkbox</type>
</CustomField>