force-app/main/default/objects/Dazos_Usage_Data__c/fields/Leads_Count__c.field-meta.xml
<CustomField>
    <fullName>Leads_Count__c</fullName>
    <description>Number of Leads associated with the Account.</description>
    <inlineHelpText>Number of Leads associated with the Account.</inlineHelpText>
    <label>Leads Count</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>