force-app/main/default/objects/Dazos_Usage_Data__c/fields/Location_Count__c.field-meta.xml
<CustomField>
    <fullName>Location_Count__c</fullName>
    <description>Number of Locations associated with the Account</description>
    <inlineHelpText>Number of Locations associated with the Account.</inlineHelpText>
    <label>Location Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>