force-app/main/default/objects/Dazos_Usage_Data__c/fields/Marketing_Reports_Limited__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Reports_Limited__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this account has limited access to Marketing Reports.</description>
    <inlineHelpText>Indicates whether this account has limited access to Marketing Reports.</inlineHelpText>
    <label>Marketing Reports Limited</label>
    <type>Checkbox</type>
</CustomField>