force-app/main/default/objects/Dazos_Usage_Data__c/fields/New_Opportunity_Count_Before_Yesterday__c.field-meta.xml
<CustomField>
    <fullName>New_Opportunity_Count_Before_Yesterday__c</fullName>
    <description>Number of new Opportunities created the day before yesterday for this Account.</description>
    <inlineHelpText>Number of new Opportunities created the day before yesterday for this Account.</inlineHelpText>
    <label>New Opportunity Count Before Yesterday</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>