force-app/main/default/objects/Dazos_Usage_Data__c/fields/New_Opportunity_Count_Current_Week__c.field-meta.xml
<CustomField>
    <fullName>New_Opportunity_Count_Current_Week__c</fullName>
    <description>Number of new Opportunities created this week for the Account.</description>
    <inlineHelpText>Number of new Opportunities created this week for the Account.</inlineHelpText>
    <label>New Opportunity Count Current Week</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>