force-app/main/default/objects/Dazos_Usage_Data__c/fields/New_Opportunity_Count_Last_30_Days__c.field-meta.xml
<CustomField>
    <fullName>New_Opportunity_Count_Last_30_Days__c</fullName>
    <description>Number of new Opportunities created in the last 30 days for the Account.</description>
    <inlineHelpText>Number of new Opportunities created in the last 30 days for the Account.</inlineHelpText>
    <label>New Opportunity Count Last 30 Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>