force-app/main/default/objects/Dazos_Usage_Data__c/fields/Opportunity_Count__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Count__c</fullName>
    <description>Number of Opportunities associated with the Account.</description>
    <inlineHelpText>Number of Opportunities associated with the Account.</inlineHelpText>
    <label>Opportunity Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>