force-app/main/default/objects/Dazos_Usage_Data__c/fields/Other_Integrations__c.field-meta.xml
<CustomField>
    <fullName>Other_Integrations__c</fullName>
    <description>List of other integrations associated with the Account.</description>
    <inlineHelpText>List of other integrations associated with the Account.</inlineHelpText>
    <label>Other Integrations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DocuSign</fullName>
            </value>
            <value>
                <fullName>Zapier</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>FinPay</fullName>
            </value>
            <value>
                <fullName>Keragon</fullName>
            </value>
            <value>
                <fullName>Workato</fullName>
            </value>
            <value>
                <fullName>Recovery.com</fullName>
            </value>
            <value>
                <fullName>TalkFurther</fullName>
            </value>
            <value>
                <fullName>Quickbooks</fullName>
            </value>
            <value>
                <fullName>Facebook Messenger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>