force-app/main/default/objects/Dazos_Usage_Data__c/fields/Payment_Integrations__c.field-meta.xml
<CustomField>
    <fullName>Payment_Integrations__c</fullName>
    <description>List of payment integrations associated with the Account.</description>
    <inlineHelpText>List of payment integrations associated with the Account.</inlineHelpText>
    <label>Payment Integrations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Authorize.net</fullName>
            </value>
            <value>
                <fullName>QBMS</fullName>
            </value>
            <value>
                <fullName>Stripe</fullName>
            </value>
            <value>
                <fullName>Square</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>