force-app/main/default/objects/Dazos_Usage_Data__c/fields/Referral_Contact_Count__c.field-meta.xml
<CustomField>
    <fullName>Referral_Contact_Count__c</fullName>
    <description>Number of Referral Contacts associated with the Account.</description>
    <inlineHelpText>Number of Referral Contacts associated with the Account.</inlineHelpText>
    <label>Referral Contact Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>