force-app/main/default/objects/Dazos_Usage_Data__c/fields/User_Count__c.field-meta.xml
<CustomField>
    <fullName>User_Count__c</fullName>
    <description>Number of Users associated with the Account.</description>
    <inlineHelpText>Number of Users associated with the Account.</inlineHelpText>
    <label>User Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>