force-app/main/default/objects/Dazos_Usage_Data__c/fields/VOBs_per_Account__c.field-meta.xml
<CustomField>
    <fullName>VOBs_per_Account__c</fullName>
    <label>VOBs per Account</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>