force-app/main/default/objects/Dazos_Usage_Data__c/fields/VOBs_per_Lead__c.field-meta.xml
<CustomField>
    <fullName>VOBs_per_Lead__c</fullName>
    <description>Stores the number of VOBs associated with this account for Leads.</description>
    <inlineHelpText>Stores the number of VOBs associated with this account for Leads.</inlineHelpText>
    <label>VOBs per Lead</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>