force-app/main/default/objects/Dazos_Usage_Data__c/fields/VOIPs_Integrated__c.field-meta.xml
<CustomField>
    <fullName>VOIPs_Integrated__c</fullName>
    <description>VOIP systems integrated with the Account.</description>
    <inlineHelpText>VOIP systems integrated with the Account.</inlineHelpText>
    <label>VOIPs Integrated</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VOIP 1</fullName>
            </value>
            <value>
                <fullName>VOIP 2</fullName>
            </value>
            <value>
                <fullName>VOIP 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>